# SLIC-OPENMP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SLIC.h  main.cpp
SLIC-OPENMP/: CMakeLists.txt
